--- a/FavPlaces/Base.lproj/Main.storyboard
+++ b/FavPlaces/Base.lproj/Main.storyboard
@@ -174,10 +174,23 @@
                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Photo" translatesAutoresizingMaskIntoConstraints="NO" id="nzO-O0-ygR">
                                                     <rect key="frame" x="0.0" y="0.0" width="414" height="320"/>
                                                 </imageView>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pXV-Tg-l9K">
+                                                    <rect key="frame" x="344" y="259" width="50" height="50"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="50" id="aSF-Ri-XTb"/>
+                                                        <constraint firstAttribute="height" constant="50" id="su6-2H-0VN"/>
+                                                    </constraints>
+                                                    <state key="normal" image="map"/>
+                                                    <connections>
+                                                        <segue destination="myQ-7T-o7a" kind="presentation" identifier="showPlaceLocation" modalPresentationStyle="fullScreen" id="jTF-7A-izR"/>
+                                                    </connections>
+                                                </button>
                                             </subviews>
                                             <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             <constraints>
                                                 <constraint firstAttribute="trailing" secondItem="nzO-O0-ygR" secondAttribute="trailing" id="04g-EE-hCa"/>
+                                                <constraint firstItem="pXV-Tg-l9K" firstAttribute="trailing" secondItem="Dss-V9-cWF" secondAttribute="trailingMargin" id="80S-sU-TsX"/>
+                                                <constraint firstItem="pXV-Tg-l9K" firstAttribute="bottom" secondItem="Dss-V9-cWF" secondAttribute="bottomMargin" id="HUP-Av-kVH"/>
                                                 <constraint firstItem="nzO-O0-ygR" firstAttribute="leading" secondItem="Dss-V9-cWF" secondAttribute="leading" id="dfm-z7-Hqg"/>
                                                 <constraint firstAttribute="bottom" secondItem="nzO-O0-ygR" secondAttribute="bottom" id="tWD-cX-07o"/>
                                                 <constraint firstItem="nzO-O0-ygR" firstAttribute="top" secondItem="Dss-V9-cWF" secondAttribute="top" id="zwf-1r-hk9"/>
@@ -224,18 +237,31 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Place location" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="G4a-pF-71C">
-                                                    <rect key="frame" x="15" y="0.0" width="384" height="45"/>
+                                                    <rect key="frame" x="15" y="0.0" width="347" height="45"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                                     <textInputTraits key="textInputTraits" autocapitalizationType="sentences" returnKeyType="done"/>
                                                     <connections>
                                                         <outlet property="delegate" destination="8rP-HS-1W9" id="MGd-SG-XGB"/>
                                                     </connections>
                                                 </textField>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LH9-o0-WV5">
+                                                    <rect key="frame" x="377" y="11.5" width="22" height="22"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="22" id="VZx-Ff-xmd"/>
+                                                        <constraint firstAttribute="height" constant="22" id="lYM-PS-Io9"/>
+                                                    </constraints>
+                                                    <state key="normal" image="MapPlaceholder"/>
+                                                    <connections>
+                                                        <segue destination="myQ-7T-o7a" kind="presentation" identifier="getAddress" modalPresentationStyle="fullScreen" id="5Db-0H-uVT"/>
+                                                    </connections>
+                                                </button>
                                             </subviews>
                                             <constraints>
                                                 <constraint firstItem="G4a-pF-71C" firstAttribute="leading" secondItem="KYz-4L-gip" secondAttribute="leading" constant="15" id="0rh-So-hek"/>
-                                                <constraint firstAttribute="trailing" secondItem="G4a-pF-71C" secondAttribute="trailing" constant="15" id="eIF-NV-noX"/>
+                                                <constraint firstItem="LH9-o0-WV5" firstAttribute="centerY" secondItem="KYz-4L-gip" secondAttribute="centerY" id="BnM-bH-fan"/>
+                                                <constraint firstItem="LH9-o0-WV5" firstAttribute="leading" secondItem="G4a-pF-71C" secondAttribute="trailing" constant="15" id="V27-GD-Pqh"/>
                                                 <constraint firstItem="G4a-pF-71C" firstAttribute="top" secondItem="KYz-4L-gip" secondAttribute="top" id="ibf-Ud-t64"/>
+                                                <constraint firstAttribute="trailing" secondItem="LH9-o0-WV5" secondAttribute="trailing" constant="15" id="mPa-Eb-Q0W"/>
                                                 <constraint firstAttribute="bottom" secondItem="G4a-pF-71C" secondAttribute="bottom" id="zYz-Yp-C39"/>
                                             </constraints>
                                         </tableViewCellContentView>
@@ -323,6 +349,96 @@
             </objects>
             <point key="canvasLocation" x="1702.8985507246377" y="65.625"/>
         </scene>
+        <!--Map View Controller-->
+        <scene sceneID="QYG-zk-3DS">
+            <objects>
+                <viewController id="myQ-7T-o7a" customClass="MapViewController" customModule="FavPlaces" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="icX-Qr-Suf">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="ZIg-4Q-8oA">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                            </mapView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="axE-Gq-Ayy">
+                                <rect key="frame" x="30" y="74" width="30" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="30" id="fda-Ng-VCo"/>
+                                    <constraint firstAttribute="height" constant="30" id="ueY-fo-bIC"/>
+                                </constraints>
+                                <state key="normal" image="cancel"/>
+                                <connections>
+                                    <action selector="closeMapVC" destination="myQ-7T-o7a" eventType="touchUpInside" id="yTh-ts-2Az"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7Pq-dB-Dyo">
+                                <rect key="frame" x="30" y="792" width="40" height="40"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="5S5-w2-rAP"/>
+                                    <constraint firstAttribute="width" constant="40" id="bkK-BP-rvr"/>
+                                </constraints>
+                                <inset key="imageEdgeInsets" minX="-1" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                <state key="normal" image="UserLocation"/>
+                                <connections>
+                                    <action selector="centerViewOnUserLocation" destination="myQ-7T-o7a" eventType="touchUpInside" id="aL8-xR-8II"/>
+                                </connections>
+                            </button>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Pin" translatesAutoresizingMaskIntoConstraints="NO" id="61c-Dy-hV5">
+                                <rect key="frame" x="187" y="408" width="40" height="40"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="40" id="QaO-vb-LTr"/>
+                                    <constraint firstAttribute="height" constant="40" id="ZvG-yM-3yu"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Current address" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UE4-CV-DvW">
+                                <rect key="frame" x="30" y="157" width="354" height="30"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="25"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QlV-MT-p59">
+                                <rect key="frame" x="326" y="790" width="58" height="42"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="25"/>
+                                <state key="normal" title="Done">
+                                    <color key="titleColor" systemColor="labelColor"/>
+                                </state>
+                                <connections>
+                                    <action selector="doneButtonPressed" destination="myQ-7T-o7a" eventType="touchUpInside" id="xnb-gW-Odt"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="Pm4-cz-iOw"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="Pm4-cz-iOw" firstAttribute="trailing" secondItem="UE4-CV-DvW" secondAttribute="trailing" constant="30" id="7RI-R6-bFt"/>
+                            <constraint firstAttribute="bottom" secondItem="ZIg-4Q-8oA" secondAttribute="bottom" id="Czb-Bu-zOO"/>
+                            <constraint firstItem="axE-Gq-Ayy" firstAttribute="leading" secondItem="Pm4-cz-iOw" secondAttribute="leading" constant="30" id="Eh0-bx-rv2"/>
+                            <constraint firstItem="ZIg-4Q-8oA" firstAttribute="top" secondItem="icX-Qr-Suf" secondAttribute="top" id="Ey2-KC-PLC"/>
+                            <constraint firstItem="7Pq-dB-Dyo" firstAttribute="leading" secondItem="Pm4-cz-iOw" secondAttribute="leading" constant="30" id="NCw-nN-ZY9"/>
+                            <constraint firstItem="ZIg-4Q-8oA" firstAttribute="leading" secondItem="Pm4-cz-iOw" secondAttribute="leading" id="O3v-dV-S5N"/>
+                            <constraint firstItem="61c-Dy-hV5" firstAttribute="centerX" secondItem="icX-Qr-Suf" secondAttribute="centerX" id="OZg-Uf-e4D"/>
+                            <constraint firstItem="Pm4-cz-iOw" firstAttribute="bottom" secondItem="QlV-MT-p59" secondAttribute="bottom" constant="30" id="YKb-vg-Sao"/>
+                            <constraint firstItem="axE-Gq-Ayy" firstAttribute="top" secondItem="Pm4-cz-iOw" secondAttribute="top" constant="30" id="YeG-7G-ReQ"/>
+                            <constraint firstItem="QlV-MT-p59" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="7Pq-dB-Dyo" secondAttribute="trailing" constant="171" id="ZSL-pA-RMV"/>
+                            <constraint firstItem="ZIg-4Q-8oA" firstAttribute="trailing" secondItem="Pm4-cz-iOw" secondAttribute="trailing" id="a32-BL-dIt"/>
+                            <constraint firstItem="UE4-CV-DvW" firstAttribute="top" secondItem="axE-Gq-Ayy" secondAttribute="bottom" constant="53" id="ce5-Uf-nk6"/>
+                            <constraint firstItem="Pm4-cz-iOw" firstAttribute="bottom" secondItem="7Pq-dB-Dyo" secondAttribute="bottom" constant="30" id="kiL-wR-RWo"/>
+                            <constraint firstItem="Pm4-cz-iOw" firstAttribute="trailing" secondItem="QlV-MT-p59" secondAttribute="trailing" constant="30" id="nBV-Oc-Li9"/>
+                            <constraint firstItem="61c-Dy-hV5" firstAttribute="centerY" secondItem="icX-Qr-Suf" secondAttribute="centerY" constant="-20" id="t79-GA-uWU"/>
+                            <constraint firstItem="UE4-CV-DvW" firstAttribute="leading" secondItem="Pm4-cz-iOw" secondAttribute="leading" constant="30" id="yox-8i-Eno"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="doneButton" destination="QlV-MT-p59" id="vzH-db-wTO"/>
+                        <outlet property="mapPinImage" destination="61c-Dy-hV5" id="uaS-PQ-Ouf"/>
+                        <outlet property="mapView" destination="ZIg-4Q-8oA" id="9Dy-1I-Uee"/>
+                        <outlet property="placeAddressLabel" destination="UE4-CV-DvW" id="odu-hQ-1GK"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="hi6-rf-Bic" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2427.536231884058" y="65.625"/>
+        </scene>
         <!--Navigation Controller-->
         <scene sceneID="cSV-bh-E6r">
             <objects>
@@ -377,12 +493,21 @@
     </designables>
     <inferredMetricsTieBreakers>
         <segue reference="LsL-Mo-JcE"/>
+        <segue reference="5Db-0H-uVT"/>
     </inferredMetricsTieBreakers>
     <resources>
+        <image name="MapPlaceholder" width="22" height="22"/>
         <image name="Photo" width="195" height="196"/>
+        <image name="Pin" width="42" height="42"/>
+        <image name="UserLocation" width="128" height="128"/>
         <image name="arrow.up.arrow.down" catalog="system" width="128" height="98"/>
+        <image name="cancel" width="128" height="128"/>
+        <image name="map" width="50" height="50"/>
         <systemColor name="groupTableViewBackgroundColor">
             <color red="0.94901960784313721" green="0.94901960784313721" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="labelColor">
+            <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
